--- a/templates/view.html
+++ b/templates/view.html
@@ -53,9 +53,9 @@
 
           <div class="mt-3 d-flex gap-2">
             <form method="post" action="{{ url_for('delete_note_handler', token=token) }}">
-              <button class="btn btn-outline-danger btn-sm" type="submit">Delete now</button>
+              <button class="btn btn-danger btn-sm" type="submit">Delete now</button>
             </form>
-            <a class="btn btn-sm btn-link" href="{{ url_for('index') }}">Create new</a>
+            <a class="btn btn-solid btn-sm" href="{{ url_for('index') }}">Create new</a>
           </div>
         {% endif %}
       </div>
