--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 
           <div class="mt-3"></div>
           <div class="mt-auto d-flex gap-2">
-            <button type="submit" class="btn btn-primary">Create Note</button>
+            <button type="submit" class="btn btn-dark" id="createNoteBtn">Create Note</button>
             <a class="btn btn-outline-secondary" href="{{ url_for('index') }}">Reset</a>
           </div>
         </form>
