--- a/templates/share.html
+++ b/templates/share.html
@@ -17,11 +17,9 @@
         <p class="small text-muted">URL expires in <strong>{{ ttl }} seconds</strong>.</p>
 
         <div class="mt-3">
-          <a class="btn btn-solid btn-sm me-2" href="{{ url_for('index') }}">Create another</a>
-          <a class="btn btn-solid btn-sm me-2" href="{{ url_for('index') }}">Home</a>
-          <form method="post" action="{{ url_for('delete_note_handler', token=token) }}" style="display:inline">
-            <button class="btn btn-danger btn-sm" type="submit">Delete now</button>
-          </form>
+          <a class="btn btn-dark" id="createAnotherBtn" href="{{ url_for('index') }}">Create another</a>
+          <a class="btn btn-dark" id="homeBtn" href="{{ url_for('index') }}">Home</a>
+          <button class="btn btn-dark" id="deleteNowBtn" type="submit">Delete now</button>
         </div>
       </div>
     </div>
