--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}" />
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/ephemeralNotes.png') }}">
   </head>
     <body class="bg-white text-dark">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background: linear-gradient(90deg,#0b1220,#071025); box-shadow: 0 2px 6px rgba(0,0,0,0.18);">
