Updating buttons style

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="{{ url_for('index') }}">
           <img src="{{ url_for('static', filename='img/ephemeralNotes.png') }}" alt="logo" height="34" class="me-2"/>
-          <span class="fw-bold">Ephemeral Notes</span>
+          <span class="fw-bold">Ephemeral Notesd</span>
         </a>
         <button
           class="navbar-toggler"
