Finally working version

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item dropdown me-2">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ url_for('index') }}">Home</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('about') }}">About</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('privacy') }}">Privacy Policy</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('dashboard') }}">Dashboard</a></li>
               </ul>
             </li>
           </ul>
