Improvements in UX and code

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,8 @@
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ url_for('index') }}">Home</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('about') }}">About</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('privacy') }}">Privacy Policy</a></li>
               </ul>
             </li>
           </ul>
