--- a/templates/share.html
+++ b/templates/share.html
@@ -16,10 +16,9 @@
 
         <p class="small text-muted">URL expires in <strong>{{ ttl }} seconds</strong>.</p>
 
-        <div class="mt-3">
-          <a class="btn btn-dark" id="createAnotherBtn" href="{{ url_for('index') }}">Create another</a>
+        <div class="mt-3 d-flex gap-2">
           <a class="btn btn-dark" id="homeBtn" href="{{ url_for('index') }}">Home</a>
-          <button class="btn btn-dark" id="deleteNowBtn" type="submit">Delete now</button>
+          <a class="btn btn-dark" id="createAnotherBtn" href="{{ url_for('index') }}">Create another</a>
         </div>
       </div>
     </div>
