--- a/templates/view.html
+++ b/templates/view.html
@@ -52,10 +52,10 @@
           {% endif %}
 
           <div class="mt-3 d-flex gap-2">
-            <form method="post" action="{{ url_for('delete_note_handler', token=token) }}">
-              <button class="btn btn-dark" id="deleteNowBtn" type="submit">Delete now</button>
-            </form>
             <a class="btn btn-solid btn-sm" href="{{ url_for('index') }}">Create new</a>
+            <form method="post" action="{{ url_for('delete_note_handler', token=token) }}">
+              <button class="btn btn-danger btn-sm" id="deleteNowBtn" type="submit">Delete now</button>
+            </form>
           </div>
         {% endif %}
       </div>
