--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ title if title else "Ephemeral Notes" }}</title>
-
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}" />
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/ephemeralNotes.png') }}">
     <script type="text/javascript">
@@ -19,7 +13,7 @@
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
             t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "tbtobaix2p");
+        })(window, document, "clarity", "script", "tclw7h85r5");
     </script>
   </head>
     <body class="bg-white text-dark">
